--- a/package.json
+++ b/package.json
@@ -8,9 +8,21 @@
   },
   "keywords": [],
   "author": "",
-  "description": "",
+  "description": "[![Product Name](image.png)](https://www.youtube.com/watch?v=G5rULR53uMk)",
   "dependencies": {
     "@line/bot-sdk": "^6.3.0",
     "express": "^4.16.4"
-  }
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jphacks/KB_1816.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jphacks/KB_1816/issues"
+  },
+  "homepage": "https://github.com/jphacks/KB_1816#readme"
 }
